[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.85.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "psycopg2-binary>=2.9.9",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
